[package]
name = "storage"
version = "0.0.1"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bitcode = { workspace = true }
clap = { workspace = true }
fs2 = "0.4.3"
async-rdma = { workspace = true }
anyhow = { workspace = true }
